Bug 407916 - Nothing appears in Tool Options when selecting any tool when un-docked
Summary: Nothing appears in Tool Options when selecting any tool when un-docked
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 4.2.0-beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2019-05-24 18:32 UTC by Mufeed
Modified: 2019-05-27 13:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video - Tool Options (2.59 MB, video/mp4)
2019-05-24 18:32 UTC, Mufeed
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mufeed 2019-05-24 18:32:16 UTC
Created attachment 120289 [details]
Video - Tool Options

SUMMARY
Nothing appears in Tool Options when selecting any tool. (See the attachment)
Note: (I started with a clean configuration)

STEPS TO REPRODUCE
1. Select any tool (Brush Tool)
2. Go to Tool Options (No Options) when un-docked

OBSERVED RESULT
No Options 

EXPECTED RESULT
There should be a setting in the Tool Options when un-docked in any location

SOFTWARE/OS VERSIONS
Windows: 
Windows: Windows 10 1809 Built 17763.503

ADDITIONAL INFORMATION

Wacom Intuos Pro Pen Tablet (Medium)
Comment 1 Halla Rempt 2019-05-25 09:52:14 UTC
Hi Mufeed,

Thanks for the report. I can confirm the issue.
Comment 2 wolthera 2019-05-27 07:47:53 UTC
Can confirm on KDE Neon

System Info
--------------------------
Krita

 Version: 4.2.0-beta (git 77c9d6b)
 Languages: en_US, en_GB, nl
 Hidpi: true

Qt

  Version (compiled): 5.12.0
  Version (loaded): 5.12.0

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.15.0-50-generic
  Pretty Productname: KDE neon User Edition 5.15
  Product Type: neon
  Product Version: 18.04

Hardware Information

  GPU Acceleration: auto
  Memory: 7725 Mb
  Number of Cores: 8
  Swap Location: /tmp
Comment 3 Halla Rempt 2019-05-27 07:55:33 UTC
This works with the latest nightly, at least on Linux. Could you please check the latest nightly on Windows? See https://binary-factory.kde.org/job/Krita_Nightly_Windows_Build/
Comment 4 Halla Rempt 2019-05-27 07:59:28 UTC
Okay, so we got confirmation it happens on the latest nightly for windows, so it's a windows-only bug.
Comment 5 Gremriel 2019-05-27 07:59:47 UTC
Bug is still there with krita-nightly-x64-v4.2.0-alpha-179-g77c9d6b4d0 on Windows 10
Comment 6 Halla Rempt 2019-05-27 08:29:32 UTC
Okay, that makes it pretty certain this is a bug in Qt, so we cannot let this issue block our release :-(
Comment 7 Halla Rempt 2019-05-27 09:02:20 UTC
10:32:08 <+Gremriel> krita-nightly-x64-v4.2.0-prealpha-156-ge7fe83c921 dated jan 25 does not have the bug
10:35:40 <+Gremriel> krita-nightly-x64-v4.2.0-prealpha-200-ge46e8d5c8d dated feb 14 does not have the bug
10:39:24 <+Gremriel> krita-nightly-x64-v4.2.0-prealpha-216-gbe454f91ec dated feb 19 does not have the bug
10:48:31 <+Gremriel> krita-nightly-x64-v4.2.0-prealpha-238-gfaeaa4c6e3 dated 24-02 does not have the bug
10:48:04 <+Gremriel> krita-nightly-x64-v4.2.0-prealpha-322-gd585de6b86 dated 28-02 has the bug
10:36:51 <+Gremriel> krita-nightly-x64-v4.2.0-prealpha-338-g703cbfbfae dated march 5 has it


Between 24th and 28th then.
Comment 8 Dmitry Kazakov 2019-05-27 13:29:10 UTC
Git commit 4267ad471b867c0c659fd0a2114c178210503c75 by Dmitry Kazakov.
Committed on 27/05/2019 at 13:28.
Pushed by dkazakov into branch 'master'.

Fix Tool Options docker being empty when undocked

In my HDR branch I have fixed Qt's bug of not-emitting
dockLocationChanged() for undocked state (the patch is accepted into
Qt 5.13 https://codereview.qt-project.org/c/qt/qtbase/+/252182).

Our code exploitated this bug, which should be fixed now :)
BACKPORT:krita/4.2

M  +1    -0    libs/widgets/KoToolDocker.cpp

https://invent.kde.org/kde/krita/commit/4267ad471b867c0c659fd0a2114c178210503c75
Comment 9 Dmitry Kazakov 2019-05-27 13:31:27 UTC
Git commit c386706f6463c81e3d7d7b1a30c2851df30c20e5 by Dmitry Kazakov.
Committed on 27/05/2019 at 13:31.
Pushed by dkazakov into branch 'krita/4.2'.

Fix Tool Options docker being empty when undocked

In my HDR branch I have fixed Qt's bug of not-emitting
dockLocationChanged() for undocked state (the patch is accepted into
Qt 5.13 https://codereview.qt-project.org/c/qt/qtbase/+/252182).

Our code exploitated this bug, which should be fixed now :)
BACKPORT:krita/4.2
(cherry picked from commit 4267ad471b867c0c659fd0a2114c178210503c75)

M  +1    -0    libs/widgets/KoToolDocker.cpp

https://invent.kde.org/kde/krita/commit/c386706f6463c81e3d7d7b1a30c2851df30c20e5