Fix Tool Options docker being empty when undocked

In my HDR branch I have fixed Qt's bug of not-emitting
dockLocationChanged() for undocked state (the patch is accepted into
Qt 5.13 https://codereview.qt-project.org/c/qt/qtbase/+/252182).

Our code exploitated this bug, which should be fixed now :)

BUG:407916
BACKPORT:krita/4.2